Fixed spacing for systems header.

--- a/resources/templates/style.css
+++ b/resources/templates/style.css
@@ -17,7 +17,7 @@ h4 {
   margin-bottom: 3px;
 }
 
-.systems h5 {
+.systems h4 {
   margin-bottom: 10px;
 }
 
